<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/ic_top"
        android:orientation="vertical"
        android:layout_weight="1.1" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_logo"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="#15479e"
        android:orientation="vertical"
        android:layout_weight="1" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_or_sign_up"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/et_usernameEmailPhone"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:textColorHint="@color/white"
            android:hint="@string/username_email_or_phone"
            android:background="@drawable/et_login_default"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            android:layout_marginTop="15dp"
            android:background="@drawable/et_login_default"/>

        <CheckBox
            android:id="@+id/ch_remember"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:layout_marginTop="10dp"
            android:text="@string/remember"/>

        <Button
            android:id="@+id/bt_signIn"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bt_sign_me_in"
            android:text="@string/sign_me_in"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="#000000"
        android:orientation="vertical"
        android:layout_weight="1.5" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_have_account"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/bt_createNewAccount"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:text="@string/create_new_account"
            android:background="@drawable/bt_create_new_account"/>

    </LinearLayout>



</LinearLayout>